tests/purs/failing/CoercibleConstrained3.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleConstrained3.purs:13:28 - 13:34 (line 13, column 28 - line 13, column 34)

  Could not match type
  [33m    [0m
  [33m  a0[0m
  [33m    [0m
  with type
  [33m      [0m
  [33m  N a0[0m
  [33m      [0m

while solving type class constraint
[33m                                            [0m
[33m  Prim.Coerce.Coercible (Constrained a0)    [0m
[33m                        (Constrained (N a0))[0m
[33m                                            [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mConstrained a0 -> Constrained (N a0)[0m
while checking that expression [33mcoerce[0m
  has type [33mConstrained a0 -> Constrained (N a0)[0m
in value declaration [33mconstrainedToConstrained[0m

where [33ma0[0m is a rigid type variable
        bound at (line 13, column 28 - line 13, column 34)

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

